# why-agent

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  streamlit_app.py
agent/: client.py  constants.py  graph.py  state.py
agent/prompts/: __init__.py  critique.md  system.md
agent/tools/: compare_periods.py  decompose_metric.py  inspect_schema.py  run_sql.py  schemas.py
client/backend/: deps.py  main.py  sse.py
client/backend/tests/: test_api_smoke.py
client/frontend/: package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo
client/frontend/src/app/: globals.css  layout.tsx  page.tsx
client/frontend/src/app/api/demo-questions/: route.ts
client/frontend/src/app/api/health/: route.ts
client/frontend/src/app/api/investigate/: route.ts
client/frontend/src/components/: ChatInput.tsx  DatasetInfo.tsx  DemoQuestions.tsx  ElapsedTimer.tsx  EvidencePanel.tsx  HowItWorks.tsx  PhaseTimeline.tsx  ReportView.tsx  ResizableSidebar.tsx
client/frontend/src/lib/: sseClient.ts  types.ts
data/: semantic_layer.yml  semantic_layer_6w copy.yml  semantic_layer_6w.yml  semantic_layer_mealgen.yml
data/dev/: item_nutrition.parquet  items.parquet
data/root_cause/: campaign_361_vs_296.md
docker/: entrypoint.sh  nginx.conf  supervisord.conf
docs/: CONTRIBUTING.md
scripts/: build_dev_parquet.py  chat.py  deploy_hf.sh  eval_report.py  repl_graph.py  start_vllm.sh
tests/: test_client_backends.py  test_graph_smoke.py  test_streamlit_app.py  test_tools.py
